# axum_middleware

./: .env_example  Cargo.toml
src/: app_state.rs  lib.rs  main.rs
src/router/: mod.rs
src/router/custom_middleware/: accessing_state.rs  body_middleware.rs  handling_body.rs  hello_world.rs  log_state.rs  loggit.rs  mod.rs
src/router/quotes/: create.rs  mod.rs
